[gd_scene load_steps=7 format=3 uid="uid://lt8rsgd8fj0v"]

[ext_resource type="Script" uid="uid://0x7mo7ma3y4p" path="res://settings/settings_screen.gd" id="1_lmvfa"]
[ext_resource type="PackedScene" uid="uid://b5alugxtb238t" path="res://gui/menu_button.tscn" id="2_dygcn"]
[ext_resource type="PackedScene" uid="uid://bmonxfo02bye3" path="res://gui/RadioButton.tscn" id="3_dygcn"]
[ext_resource type="PackedScene" uid="uid://d3o0ic0ya37i3" path="res://settings/labeled_slider.tscn" id="5_dygcn"]
[ext_resource type="PackedScene" uid="uid://cjqfqdvm6ttuu" path="res://gui/checkbox.tscn" id="6_lmvfa"]

[sub_resource type="ButtonGroup" id="ButtonGroup_vgh8t"]
resource_local_to_scene = false

[node name="SettingsScreen" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lmvfa")

[node name="BackButton" parent="." instance=ExtResource("2_dygcn")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.5
offset_top = -155.0
offset_right = 134.5
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
text = "Назад"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -381.0
offset_right = -487.0
offset_bottom = -251.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Екран"

[node name="WindowButton" parent="VBoxContainer" instance=ExtResource("3_dygcn")]
unique_name_in_owner = true
layout_mode = 2
text = "Вікно"
button_group = SubResource("ButtonGroup_vgh8t")

[node name="FullScreenButton" parent="VBoxContainer" instance=ExtResource("3_dygcn")]
unique_name_in_owner = true
layout_mode = 2
text = "На весь екран"
button_group = SubResource("ButtonGroup_vgh8t")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 260.0
offset_top = -417.0
offset_right = 573.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Аудіо"

[node name="Control2" type="Control" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer2/Control2"]
layout_mode = 2
offset_top = 4.0
offset_right = 313.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 40
text = "Звукові Ефекти"

[node name="SfxSlider" parent="VBoxContainer2/Control2" instance=ExtResource("5_dygcn")]
unique_name_in_owner = true
layout_mode = 0
offset_top = 67.0
offset_bottom = 83.0

[node name="Control3" type="Control" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer2/Control3"]
layout_mode = 2
offset_top = 4.0
offset_right = 313.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 40
text = "Музика"

[node name="MusicSlider" parent="VBoxContainer2/Control3" instance=ExtResource("5_dygcn")]
unique_name_in_owner = true
layout_mode = 0
offset_top = 67.0
offset_bottom = 67.0

[node name="Control4" type="Control" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer2/Control4"]
layout_mode = 2
offset_top = 4.0
offset_right = 313.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 40
text = "Голос"

[node name="VoiceSlider" parent="VBoxContainer2/Control4" instance=ExtResource("5_dygcn")]
unique_name_in_owner = true
layout_mode = 0
offset_top = 67.0
offset_bottom = 83.0

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -797.0
offset_top = 72.0
offset_right = -304.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Ефекти"

[node name="Noise" parent="VBoxContainer3" instance=ExtResource("6_lmvfa")]
unique_name_in_owner = true
layout_mode = 2
text = "Шум"

[node name="ChromaticAbberation" parent="VBoxContainer3" instance=ExtResource("6_lmvfa")]
unique_name_in_owner = true
layout_mode = 2
text = "Хроматична аберація"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 260.0
offset_top = 76.0
offset_right = 753.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Текст"

[node name="Control2" type="Control" parent="VBoxContainer4"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer4/Control2"]
layout_mode = 2
offset_top = 4.0
offset_right = 313.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 40
text = "Розмір тексту"

[node name="TextSizeSlider" parent="VBoxContainer4/Control2" instance=ExtResource("5_dygcn")]
unique_name_in_owner = true
layout_mode = 0
offset_top = 67.0
offset_bottom = 83.0
min_value = 20.0
max_value = 50.0
value = 28.0
tick_count = 5

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WindowButton" to="." method="_on_window_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FullScreenButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="value_changed" from="VBoxContainer2/Control2/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/Control3/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/Control4/VoiceSlider" to="." method="_on_voice_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer3/Noise" to="." method="_on_noise_toggled"]
[connection signal="toggled" from="VBoxContainer3/ChromaticAbberation" to="." method="_on_chromatic_abberation_toggled"]
[connection signal="value_changed" from="VBoxContainer4/Control2/TextSizeSlider" to="." method="_on_text_size_slider_value_changed"]
